creating df with 2015 data

--- a/index.html
+++ b/index.html
@@ -13,15 +13,25 @@
     <div class="container">
         <div class="jumbotron" style="text-align: center">
             <h1>Life Expectancy</h1>
-            <p>"My Analysis</p>
+            <p>My Analysis</p>
         </div>
 
         <div class="row">
+            <!-- Bubble chart thats continents average -->
             <div class="col-md-12">
-                <h2>Bubble Chart of Life Expectancy Vs GDP</h2>
-                <div id="plot"></div>
+                <h2>Box Plot of Countries - Life Expectancy</h2>
+                <div id="box_plot_continent"></div>
             </div>
+
+            <!-- Bubble chart that is country average -->
+
+            <div class="col-md-12">
+                <h2>Bubble Chart of Country - Life Expectancy Vs GDP</h2>
+                <div id="bubble_plot_country"></div>
+            </div>
+
         </div>
+        
 
         <div class="row">
             <div class="col-md-12">
